# dinamis-sdk

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
dinamis_sdk/: __init__.py  auth.py  cli.py  http.py  model.py  oauth2.py  s3.py  settings.py  signing.py  upload.py  utils.py
dinamis_sdk/examples/: __init__.py  pyotb_ndvi_loss.py  pyotb_toa_mosaic.py  rio_metadata.py
doc/: additional_resources.md  advanced.md  collections.md  credentials.md  examples.md  gen_ref_pages.py  index.md  processing_examples.md  qgis.md
tests/: test_headers.py  test_misc.py  test_push.py  test_spot-6-7-drs.py  test_spot_6_7_drs.py  test_super-s2.py  test_super_s2.py
