[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dinamis-sdk"
authors = [{name = "inrae", email = "remi.cresson@inrae.fr"}]
dynamic = ["version"]
description = "DINAMIS SDK for Python"
requires-python = ">=3.7"
dependencies = [
    "setuptools>=61.2",
    "click>=7.1",
    "pydantic>=1.7.3, <3.0.0",
    "pystac>=1.0.0",
    "pystac-client>=0.2.0",
    "requests>=2.25.1",
    "packaging",
    "qrcode",
    "appdirs",
    "pydantic_settings",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.scripts]
dinamis_cli = "dinamis_sdk.cli:app"

[tool.mypy]
show_error_codes = true
pretty = true
exclude = ["doc", "venv", ".venv"]

[tool.pylint]
disable = "W1203,R0903,E0401,W0622"

[tool.setuptools]
packages = ["dinamis_sdk"]

[tool.setuptools.dynamic]
version = {attr = "dinamis_sdk.__version__"}
